# slam-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: icp2_bench.rs
dataset/: circle.csv
dataset/sample-gen/: .gitignore  Cargo.toml
dataset/sample-gen/config/: circle.csv  linear.csv  robot_pose.csv
dataset/sample-gen/src/: circle_info.rs  csv_reader.rs  dummy_lidar.rs  lib.rs  lidar_info.rs  linear_info.rs  robot_pose_time_stamped.rs  single_ranging_info.rs
examples/: bresenham.rs  slam.rs  transformation.rs
sample/: README.md  ros2_odom_sample.yaml  ros2_scan_log.yaml  ros2_scan_sample.yaml
src/: converter.rs  debugger_yaml.rs  default_settings.rs  error.rs  icp.rs  lib.rs  map.rs  map_viz.rs  mapping.rs  point_cloud.rs  point_map.rs  protocol.rs  robot.rs  slam.rs  slam_executor.rs  slam_runner.rs  slam_viewer.rs  traits.rs  utils.rs
src/protocol/: header.rs  laser_scan.rs  odometry.rs  point.rs  point2.rs  point3.rs  pointcloud.rs  pose.rs  pose2.rs  pose3.rs
src/traits/: point.rs
